# magnum-build

./: CMakeLists.txt  README.md
doc/: configure-vs-code.md  setup-linux.md  setup-mac.md
scripts/: setup-dev-android.sh  setup-dev-desktop.sh
